[tool.poetry]
name = "final-test-poetry"
version = "0.1.0"
description = "this is an example of poetry-based project"
authors = ["Dinara Safina <dinakhai27@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc9"
pytest = "8.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
